--- a/crm.html
+++ b/crm.html
@@ -282,8 +282,8 @@
                     <h4 style="color:#64748b; margin-bottom:15px; margin-top: 30px;">4. Como será entregue?</h4>
                     <div class="selection-grid" id="entrega-grid" style="grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));">
                         <div class="selection-card" onclick="selectCard('entrega', 'RETIRADA NO BALCÃO', this)"><i class="fas fa-store"></i><span>Retirar no Balcão</span></div>
-                        <div class="selection-card" onclick="selectCard('entrega', 'INSTALAÇÃO NA LOJA', this)"><i class="fas fa-tools"></i><span>Inst. Loja</span></div>
-                        <div class="selection-card" onclick="selectCard('entrega', 'INSTALAÇÃO EXTERNA', this)"><i class="fas fa-truck-pickup"></i><span>Externa</span></div>
+                        <div class="selection-card" onclick="selectCard('entrega', 'INSTALAÇÃO NA LOJA', this)"><i class="fas fa-tools"></i><span>Instalação na Loja</span></div>
+                        <div class="selection-card" onclick="selectCard('entrega', 'INSTALAÇÃO EXTERNA', this)"><i class="fas fa-truck-pickup"></i><span>Instalação Externa</span></div>
                     </div>
                 </div>
 
