--- a/crm.html
+++ b/crm.html
@@ -256,7 +256,7 @@
                                 <input type="tel" id="pedido-supervisao" class="form-control">
                             </div>
                             <div class="form-group">
-                                <label>Valor Designer (R$)</label>
+                                <label>Valor para o Designer (R$)</label>
                                 <input type="number" id="valor-designer" class="form-control" step="0.01">
                                 <div id="saldo-container" style="display:none; margin-top:8px; font-size:0.85rem; color:#555; background:#fff; padding:5px 10px; border-radius:4px; border:1px solid #e2e8f0; display:inline-flex; align-items:center; gap:10px;">
                                     <span>Saldo: <strong id="crm-saldo-display" style="color:#2ecc71;">...</strong></span>
