--- a/painel.html
+++ b/painel.html
@@ -70,6 +70,26 @@
         </div>
     </div>
 
+    <!-- NOVO MODAL: LINK DE APROVAÇÃO (ADICIONADO) -->
+    <div class="modal-overlay" id="modal-aprovacao-link">
+        <div class="modal-content" style="max-width: 500px;">
+            <div class="modal-header">
+                <h3><i class="fas fa-check-circle"></i> Aprovar Arte</h3>
+                <button class="close-modal-aprovacao" title="Fechar">×</button>
+            </div>
+            <div class="modal-body">
+                <p style="margin-bottom: 15px; color: #555;">Para enviar para impressão, insira o link do arquivo final aprovado (Google Drive, WeTransfer, etc).</p>
+                
+                <label for="input-link-impressao" style="font-weight: 700; display: block; margin-bottom: 5px;">Link do Arquivo (Obrigatório):</label>
+                <input type="url" id="input-link-impressao" class="form-input" placeholder="https://..." style="width: 100%; padding: 10px; border: 1px solid #ccc; border-radius: 5px; margin-bottom: 20px;">
+                
+                <button id="btn-confirmar-aprovacao" class="btn-card btn-acompanhar" style="width: 100%; padding: 12px; font-size: 1rem;">
+                    Confirmar e Enviar para Impressão
+                </button>
+            </div>
+        </div>
+    </div>
+
     <!-- SCRIPTS -->
     <script src="/layout.js"></script>
     <!-- Script Global (Auth/Logout) -->
