--- a/lista-de-entregas.html
+++ b/lista-de-entregas.html
@@ -319,7 +319,7 @@
                 <span>EDP</span>
             </label>
             <ul>
-                <li><label class="subtask-label"><input type="checkbox" id="t_edp_1"><span>Cortar 30 chapas de aço (tamanho a definir)</span></label></li>
+                <li><label class="subtask-label"><input type="checkbox" id="t_edp_1"><span>Cortar 30 chapas de aço (112x75 cm)</span></label></li>
                 <li><label class="subtask-label"><input type="checkbox" id="t_edp_2"><span>Aplicar adesivos nas chapas</span></label></li>
             </ul>
         </div>
