--- a/dashboard.html
+++ b/dashboard.html
@@ -261,9 +261,7 @@
                             <a href="painel.html" class="btn-modern btn-outline">
                                 <i class="fa-solid fa-list-ul"></i> Meus Pedidos
                             </a>
-                            <a href="/criar-pedido-grafica.html" class="btn-modern btn-cta">
-                                <i class="fa-solid fa-plus"></i> Novo Pedido
-                            </a>
+                            <!-- Botão Novo Pedido removido -->
                         </div>
                     </section>
 
