--- a/dashboard.html
+++ b/dashboard.html
@@ -314,6 +314,7 @@
     <script src="https://unpkg.com/imask"></script> 
     <script src="/script.js"></script> 
     <script src="/dashboard.js"></script>
+    <script src="/globalSearch.js"></script> 
 
 </body>
 </html>
